--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ notebook==5.0.0
 numpy==1.12.1
 olefile==0.44
 packaging==16.8
+pandas==0.20.1
 pandocfilters==1.4.1
 pexpect==4.2.1
 pickleshare==0.7.4
@@ -58,4 +59,3 @@ wcwidth==0.1.7
 webencodings==0.5.1
 widgetsnbextension==2.0.0
 wikipedia==1.4.0
-wordcloud==1.3.1
